# transcribe

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
src/transcribe/: denoise.py  denoise2.py  diarize.py  episode.py  extract.py  feed.py  http.py  llama_serve.py  main.py  models.py  pipeline.py  podcasts.py  speakers.py  transcribe.py  types.py
src/transcribe/cli/: common.py  denoise.py  denoise2.py  diarize.py  distill.py  episodes.py  extract.py  sync.py  transcribe.py
tests/: conftest.py  pytest_parallel.py  test_denoise.py  test_e2e.py  test_episode.py  test_feed.py  test_pipeline.py  test_speakers.py  test_transcribe.py
transcripts/cooking-issues/cohere-transcribe-03-2026-mlx/: 001-episode-1-cooking-issues-debuts.txt  002-episode-2-cocktails.txt  003-episode-3-harold-mcgee.txt
transcripts/cooking-issues/parakeet-tdt-0.6b-v3/: 001-episode-1-cooking-issues-debuts.denoised.txt  001-episode-1-cooking-issues-debuts.denoised2.txt  001-episode-1-cooking-issues-debuts.extracted-gemma-4-26b-a4b-it-ud-iq4_nl.txt  001-episode-1-cooking-issues-debuts.extracted-gemma-4-31b-it-ud-q8_k_xl.txt  001-episode-1-cooking-issues-debuts.extracted-lfm2-8b-a1b-6bit-mlx.txt  001-episode-1-cooking-issues-debuts.extracted-qwen3.5-9b-8bit.distilled-gemma-4-26b-a4b-it-ud-iq4_nl.txt  001-episode-1-cooking-issues-debuts.extracted-qwen3.5-9b-8bit.txt  001-episode-1-cooking-issues-debuts.extracted-qwen3.5-9b-mlx-4bit.txt  001-episode-1-cooking-issues-debuts.extracted2-qwen3.5-9b-8bit.txt  001-episode-1-cooking-issues-debuts.txt  002-episode-2-cocktails.denoised.txt  002-episode-2-cocktails.extracted-gemma-4-26b-a4b-it-ud-iq4_nl.txt  002-episode-2-cocktails.extracted-gemma-4-31b-it-ud-q8_k_xl.txt  002-episode-2-cocktails.extracted-lfm2-8b-a1b-6bit-mlx.txt  002-episode-2-cocktails.extracted-qwen3.5-9b-8bit.distilled-gemma-4-26b-a4b-it-ud-iq4_nl.txt  002-episode-2-cocktails.extracted-qwen3.5-9b-8bit.txt  002-episode-2-cocktails.extracted-qwen3.5-9b-mlx-4bit.txt  002-episode-2-cocktails.txt  003-episode-3-harold-mcgee.denoised.txt  003-episode-3-harold-mcgee.extracted-gemma-4-26b-a4b-it-ud-iq4_nl.txt  003-episode-3-harold-mcgee.extracted-gemma-4-31b-it-ud-q8_k_xl.txt  003-episode-3-harold-mcgee.extracted-qwen3.5-9b-8bit.distilled-gemma-4-26b-a4b-it-ud-iq4_nl.txt  003-episode-3-harold-mcgee.extracted-qwen3.5-9b-8bit.txt  003-episode-3-harold-mcgee.txt  004-episode-4-peppers.denoised.txt  004-episode-4-peppers.extracted-gemma-4-26b-a4b-it-ud-iq4_nl.txt  004-episode-4-peppers.extracted-gemma-4-31b-it-ud-q8_k_xl.txt  004-episode-4-peppers.extracted-qwen3.5-9b-8bit.distilled-gemma-4-26b-a4b-it-ud-iq4_nl.txt  004-episode-4-peppers.extracted-qwen3.5-9b-8bit.txt  004-episode-4-peppers.txt  005-episode-5-dave-wondrich.txt  (+1455 more)
(+30 files in other folders)
